update Encoder64已过时无法使用，修改成最新得版本